# failure

./: .gitignore  .gitlab-ci.yml  .travis.yml  Cargo.lock.ci  Cargo.toml  README.md  RELEASES.md  aliases.js  bail-and-ensure.html  build-docs.sh  build.rs  custom-fail.html  dark.css  derive-fail.html  error-errorkind.html  error-msg.html  error.html  fail.html  guidance.html  howto.html  index.html  intro.html  light.css  print.html  rustdoc.css  search-index.js  string-custom-error.html  travis.sh  use-error.html
book/src/: SUMMARY.md  advice.md  bail-and-ensure.md  custom-fail.md  derive-fail.md  error-errorkind.md  error-msg.md  error.md  fail.md  guidance.md  howto.md  intro.md  use-error.md
derive-fail/: Cargo.toml
derive-fail/src/: lib.rs
derive-fail/tests/: backtrace.rs  tests.rs  wraps.rs
examples/: bail_ensure.rs  custom.rs  downcast.rs  downcast_causes.rs  error_as_cause.rs  simple.rs
failure/: AsFail.t.html  all.html  fn.err_msg.html  index.html  macro.bail.html  macro.ensure.html  macro.format_err.html  struct.Backtrace.html  struct.Causes.html  struct.Compat.html  struct.Context.html  struct.Error.html  struct.SyncFailure.html  trait.AsFail.html  trait.Fail.html  trait.ResultExt.html  type.Fallible.html
failure-0.1/: Cargo.toml
failure-0.1.X/: Cargo.toml
failure-0.1.X/failure_derive/: Cargo.toml
failure-0.1.X/failure_derive/src/: lib.rs
failure-0.1.X/src/: lib.rs
failure-0.1/failure_derive/: Cargo.toml
failure-0.1/failure_derive/tests/: backtrace.rs  wraps.rs
failure-0.1/src/: context.rs
failure-0.1/src/backtrace/: mod.rs
failure-1.X/: .travis.yml  Cargo.toml
failure-1.X/failure_derive/: Cargo.toml
failure-1.X/failure_derive/src/: lib.rs
failure-1.X/failure_derive/tests/: backtrace.rs  tests.rs  wraps.rs
failure-1.X/src/: box_std.rs  compat.rs  context.rs  error.rs  lib.rs  macros.rs  nightly_error.rs  result_ext.rs  small_error.rs
failure-1.X/src/backtrace/: mod.rs
failure-1.X/src/error/: error_impl_small.rs  mod.rs
failure_compat_shim/: Cargo.toml
failure_compat_shim/src/: lib.rs
failure_derive/: Cargo.toml  build.rs
failure_derive/src/: lib.rs
failure_derive/tests/: backtrace.rs  custom_type_bounds.rs  external_display_derive.rs  no_derive_display.rs  tests.rs  wraps.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.AsRef.js  trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/iter/iterator/: trait.Iterator.js
implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.Sync.js
implementors/std/error/: trait.Error.js
src/: __match_err__.rs  as_fail.rs  backtrace.rs  box_std.rs  chain.rs  compat.rs  context.rs  display.rs  error.rs  error_ext.rs  error_message.rs  lib.rs  macros.rs  option_ext.rs  result_ext.rs  sync_failure.rs
src/backtrace/: internal.rs  mod.rs
src/error/: error_impl.rs  error_impl_small.rs  mod.rs
src/failure/: as_fail.rs.html  box_std.rs.html  compat.rs.html  context.rs.html  error_message.rs.html  lib.rs.html  macros.rs.html  result_ext.rs.html  sync_failure.rs.html
src/failure/backtrace/: internal.rs.html  mod.rs.html
src/failure/error/: error_impl.rs.html  mod.rs.html
tests/: basic_fail.rs  fail_compat.rs  macro_trailing_comma.rs
