[package]
authors = ["Without Boats <boats@mozilla.com>"]
description = "Experimental error handling abstraction."
documentation = "https://docs.rs/failure"
homepage = "https://boats.gitlab.io/failure"
license = "MIT OR Apache-2.0"
name = "failure"
repository = "https://github.com/withoutboats/failure"
version = "0.1.1"

[dependencies.failure_derive]
optional = true
version = "0.1.1"

[dependencies.backtrace]
optional = true
version = "0.3.3"

[features]
default = ["std", "derive"]
std = ["backtrace"]
derive = ["failure_derive"]
