[package]
authors = ["Without Boats <boats@mozilla.com>"]
description = "Experimental error handling abstraction."
documentation = "https://docs.rs/failure"
homepage = "https://boats.gitlab.io/failure"
license = "MIT OR Apache-2.0"
name = "failure"
repository = "https://github.com/withoutboats/failure"
version = "0.1.2"

[dependencies.failure_compat_shim]
version = "1.0.0"
path = "../failure_compat_shim"
default-features = false

[dependencies.failure_derive]
optional = true
version = "0.1.2"
path = "./failure_derive"
default-features = false

[features]
default = ["std", "derive"]
backtrace = ["failure_compat_shim/backtrace"]
std = ["backtrace", "failure_compat_shim/std", "failure_derive/std"]
derive = ["failure_derive", "failure_compat_shim/derive"]

[[example]]
name = "bail_ensure"
path = "./examples/bail_ensure.rs"
required-features = ["std"]
