[package]
authors = ["Without Boats <boats@mozilla.com>"]
description = "Experimental error handling abstraction."
documentation = "https://docs.rs/failure"
homepage = "https://boats.gitlab.io/failure"
license = "MIT OR Apache-2.0"
name = "failure"
repository = "https://github.com/withoutboats/failure"
version = "1.0.0"

[dependencies.failure_derive]
optional = true
version = "1.0.0"
path = "./failure_derive"

[dependencies.backtrace]
optional = true
version = "0.3.3"

[features]
default = ["std", "derive"]
nightly = []
std = []
derive = ["failure_derive"]
