[package]
name = "failure_compat_shim"
version = "1.0.0"
authors = ["boats <boats@mozilla.com>"]

[dependencies.failure]
version = "1.0.0"
path = "../failure-1.X"
default-features = false

[features]
default = ["std", "derive"]
backtrace = ["failure/backtrace"]
std = ["backtrace", "failure/std"]
derive = ["failure/derive"]
