[package]
authors = ["Without Boats <woboats@gmail.com>"]
description = "derives for the failure crate"
license = "MIT OR Apache-2.0"
name = "failure_derive"
repository = "https://github.com/withoutboats/failure_derive"
homepage = "https://boats.gitlab.io/failure"
documentation = "https://boats.gitlab.io/failure"
version = "0.1.2"
build = "build.rs"

[dependencies]
quote = "0.6.3"
syn = "0.14.4"
synstructure = "0.9.0"
proc-macro2 = "0.4.8"

[dev-dependencies.failure]
version = "0.1.0"
path = ".."

[dev-dependencies.display_derive]
git = "https://github.com/withoutboats/display_derive"

[lib]
proc-macro = true

[features]
# This is kept for backward-compatibility reasons, but is otherwise a no-op
std = []
