[package]
authors = ["Without Boats <woboats@gmail.com>"]
description = "derives for the failure crate"
license = "MIT OR Apache-2.0"
name = "failure_derive"
repository = "https://github.com/withoutboats/failure_derive"
homepage = "https://boats.gitlab.io/failure"
documentation = "https://boats.gitlab.io/failure"
version = "1.0.0"

[dependencies]
quote = "0.5"
syn = "0.13"
# synstructure 0.8.0 could be built only for Rust 1.20+, 0.8.1 fixed that.
# Details on the issue: https://github.com/mystor/synstructure/issues/14
synstructure = "^0.8.1"

[dev-dependencies.failure]
version = "0.1.0"

[dev-dependencies.display_derive]
git = "https://github.com/withoutboats/display_derive"

[lib]
proc-macro = true

[features]
default = ["std"]
std = []
